[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HexTile.gd" type="Script" id=1]
[ext_resource path="res://Assets/bear.png" type="Texture" id=2]
[ext_resource path="res://Assets/puma.png" type="Texture" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "unit_hex_mesh"
surfaces/0 = {
"aabb": AABB( -0.577351, 0, -0.5, 1.1547, 0.25, 1.00001 ),
"array_data": PoolByteArray( 66, 205, 147, 190, 0, 0, 0, 0, 4, 0, 0, 63, 176, 0, 46, 63, 0, 56, 0, 60, 64, 205, 19, 191, 0, 0, 0, 0, 44, 205, 147, 179, 176, 0, 46, 63, 0, 0, 0, 60, 66, 205, 147, 190, 0, 0, 128, 62, 4, 0, 0, 63, 176, 0, 46, 63, 0, 56, 0, 58, 64, 205, 19, 191, 0, 0, 128, 62, 44, 205, 147, 179, 176, 0, 46, 63, 0, 0, 0, 58, 62, 205, 147, 190, 0, 0, 128, 62, 6, 0, 0, 191, 127, 126, 129, 63, 158, 52, 0, 58, 62, 205, 147, 190, 0, 0, 0, 0, 6, 0, 0, 191, 127, 126, 129, 63, 158, 52, 0, 60, 66, 205, 147, 62, 0, 0, 128, 62, 4, 0, 0, 191, 127, 126, 129, 63, 158, 180, 0, 58, 66, 205, 147, 62, 0, 0, 0, 0, 4, 0, 0, 191, 127, 126, 129, 63, 158, 180, 0, 60, 66, 205, 147, 62, 0, 0, 128, 62, 4, 0, 0, 191, 0, 127, 127, 63, 158, 52, 255, 55, 64, 205, 19, 63, 0, 0, 128, 62, 46, 205, 147, 51, 0, 127, 127, 63, 158, 56, 0, 60, 62, 205, 147, 190, 0, 0, 128, 62, 6, 0, 0, 191, 0, 127, 127, 63, 158, 180, 255, 55, 64, 205, 19, 191, 0, 0, 128, 62, 44, 205, 147, 179, 0, 127, 127, 63, 158, 184, 255, 59, 62, 205, 147, 62, 0, 0, 128, 62, 6, 0, 0, 63, 0, 127, 127, 63, 158, 52, 0, 62, 66, 205, 147, 190, 0, 0, 128, 62, 4, 0, 0, 63, 0, 127, 127, 63, 158, 180, 0, 62, 64, 205, 19, 191, 0, 0, 0, 0, 44, 205, 147, 179, 129, 46, 210, 63, 0, 0, 0, 60, 62, 205, 147, 190, 0, 0, 0, 0, 6, 0, 0, 191, 129, 46, 210, 63, 0, 184, 0, 60, 64, 205, 19, 191, 0, 0, 128, 62, 44, 205, 147, 179, 129, 46, 210, 63, 0, 0, 0, 58, 62, 205, 147, 190, 0, 0, 128, 62, 6, 0, 0, 191, 129, 46, 210, 63, 0, 184, 0, 58, 64, 205, 19, 63, 0, 0, 0, 0, 46, 205, 147, 51, 80, 0, 127, 103, 0, 0, 0, 60, 62, 205, 147, 62, 0, 0, 0, 0, 6, 0, 0, 63, 80, 0, 127, 103, 0, 184, 0, 60, 64, 205, 19, 63, 0, 0, 128, 62, 46, 205, 147, 51, 80, 0, 127, 103, 0, 0, 0, 58, 62, 205, 147, 62, 0, 0, 128, 62, 6, 0, 0, 63, 80, 0, 127, 103, 0, 184, 0, 58, 66, 205, 147, 62, 0, 0, 0, 0, 4, 0, 0, 191, 127, 46, 129, 103, 0, 56, 0, 60, 64, 205, 19, 63, 0, 0, 0, 0, 46, 205, 147, 51, 127, 46, 129, 103, 0, 0, 0, 60, 66, 205, 147, 62, 0, 0, 128, 62, 4, 0, 0, 191, 127, 46, 129, 103, 0, 56, 0, 58, 64, 205, 19, 63, 0, 0, 128, 62, 46, 205, 147, 51, 127, 46, 129, 103, 0, 0, 0, 58, 66, 205, 147, 62, 0, 0, 0, 0, 4, 0, 0, 191, 0, 129, 127, 63, 158, 52, 0, 62, 62, 205, 147, 190, 0, 0, 0, 0, 6, 0, 0, 191, 0, 129, 127, 63, 158, 180, 0, 62, 64, 205, 19, 63, 0, 0, 0, 0, 46, 205, 147, 51, 0, 129, 127, 63, 158, 56, 255, 59, 64, 205, 19, 191, 0, 0, 0, 0, 44, 205, 147, 179, 0, 129, 127, 63, 158, 184, 0, 60, 62, 205, 147, 62, 0, 0, 0, 0, 6, 0, 0, 63, 0, 129, 127, 63, 158, 52, 255, 55, 66, 205, 147, 190, 0, 0, 0, 0, 4, 0, 0, 63, 0, 129, 127, 63, 158, 180, 255, 55, 66, 205, 147, 190, 0, 0, 0, 0, 4, 0, 0, 63, 0, 0, 126, 63, 158, 180, 0, 60, 66, 205, 147, 190, 0, 0, 128, 62, 4, 0, 0, 63, 0, 0, 126, 63, 158, 180, 0, 58, 62, 205, 147, 62, 0, 0, 0, 0, 6, 0, 0, 63, 0, 0, 126, 63, 158, 52, 0, 60, 62, 205, 147, 62, 0, 0, 128, 62, 6, 0, 0, 63, 0, 0, 126, 63, 158, 52, 0, 58 ),
"array_index_data": PoolByteArray( 2, 0, 0, 0, 1, 0, 1, 0, 3, 0, 2, 0, 6, 0, 4, 0, 5, 0, 5, 0, 7, 0, 6, 0, 10, 0, 8, 0, 9, 0, 9, 0, 11, 0, 10, 0, 9, 0, 12, 0, 11, 0, 12, 0, 13, 0, 11, 0, 16, 0, 14, 0, 15, 0, 15, 0, 17, 0, 16, 0, 20, 0, 18, 0, 19, 0, 19, 0, 21, 0, 20, 0, 24, 0, 22, 0, 23, 0, 23, 0, 25, 0, 24, 0, 28, 0, 26, 0, 27, 0, 27, 0, 29, 0, 28, 0, 29, 0, 30, 0, 28, 0, 29, 0, 31, 0, 30, 0, 34, 0, 32, 0, 33, 0, 33, 0, 35, 0, 34, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 60,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 36
}

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( -0.2887, 0.25, 0.5, -0.2887, 0, 0.5, -0.5774, 0, 0, -0.5774, 0, 0, -0.5774, 0.25, 0, -0.2887, 0.25, 0.5, 0.2887, 0.25, -0.5, -0.2887, 0.25, -0.5, -0.2887, 0, -0.5, -0.2887, 0, -0.5, 0.2887, 0, -0.5, 0.2887, 0.25, -0.5, -0.2887, 0.25, -0.5, 0.2887, 0.25, -0.5, 0.5774, 0.25, 0, 0.5774, 0.25, 0, -0.5774, 0.25, 0, -0.2887, 0.25, -0.5, 0.5774, 0.25, 0, 0.2887, 0.25, 0.5, -0.5774, 0.25, 0, 0.2887, 0.25, 0.5, -0.2887, 0.25, 0.5, -0.5774, 0.25, 0, -0.5774, 0.25, 0, -0.5774, 0, 0, -0.2887, 0, -0.5, -0.2887, 0, -0.5, -0.2887, 0.25, -0.5, -0.5774, 0.25, 0, 0.5774, 0.25, 0, 0.5774, 0, 0, 0.2887, 0, 0.5, 0.2887, 0, 0.5, 0.2887, 0.25, 0.5, 0.5774, 0.25, 0, 0.2887, 0.25, -0.5, 0.2887, 0, -0.5, 0.5774, 0, 0, 0.5774, 0, 0, 0.5774, 0.25, 0, 0.2887, 0.25, -0.5, 0.5774, 0, 0, 0.2887, 0, -0.5, -0.2887, 0, -0.5, -0.2887, 0, -0.5, -0.5774, 0, 0, 0.5774, 0, 0, -0.5774, 0, 0, 0.2887, 0, 0.5, 0.5774, 0, 0, -0.5774, 0, 0, -0.2887, 0, 0.5, 0.2887, 0, 0.5, 0.2887, 0, 0.5, -0.2887, 0, 0.5, -0.2887, 0.25, 0.5, -0.2887, 0.25, 0.5, 0.2887, 0.25, 0.5, 0.2887, 0, 0.5 )

[node name="HexTile" type="Spatial"]
script = ExtResource( 1 )

[node name="unit_hex" type="Spatial" parent="."]

[node name="mergedBlocks(Clone)" type="MeshInstance" parent="unit_hex"]
mesh = SubResource( 1 )

[node name="StaticBody" type="StaticBody" parent="unit_hex/mergedBlocks(Clone)"]

[node name="CollisionShape" type="CollisionShape" parent="unit_hex/mergedBlocks(Clone)/StaticBody"]
shape = SubResource( 2 )

[node name="BearSprite" type="Sprite3D" parent="."]
transform = Transform( 0.0442281, 0, 0, 0, -1.93327e-09, 0.982846, 0, -0.0442281, -4.29615e-08, 0, 0.251, 0 )
visible = false
texture = ExtResource( 2 )

[node name="PumaSprite" type="Sprite3D" parent="."]
transform = Transform( 0.0442281, 0, 0, 0, -1.93327e-09, 0.982846, 0, -0.0442281, -4.29615e-08, 0, 0.251, 0 )
visible = false
texture = ExtResource( 3 )

[connection signal="mouse_entered" from="unit_hex/mergedBlocks(Clone)/StaticBody" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="unit_hex/mergedBlocks(Clone)/StaticBody" to="." method="_on_StaticBody_mouse_exited"]
